--- a/src/styles.scss
+++ b/src/styles.scss
@@ -579,6 +579,8 @@ body .slick-prev, body .slick-next {
         }
         &-product {
             &-content {
+                padding: 80px 40px 40px;
+
                 .premag-product-item-title{
                     display: flex;
                     flex-direction: column;
@@ -594,6 +596,8 @@ body .slick-prev, body .slick-next {
         }
         &-tecnologia {
             &-content {
+                padding: 80px 40px 40px;
+
                 .premag-product-item-title{
                     display: flex;
                     flex-direction: column;
@@ -602,7 +606,7 @@ body .slick-prev, body .slick-next {
                     
                 }
                 .premag-page-title {
-                    width: max-content;
+                    
 
                 }
                 
@@ -644,7 +648,7 @@ body .slick-prev, body .slick-next {
         }
         &-tecnologia {
             &-content {
-                padding-top: 160px;
+                padding: 160px 40px 40px;
             }
         }
         &-contato-content {
