Reinstalação do ambiente e alterações no site de acordo com doc enviado

--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -17,11 +17,11 @@
                   <li class="nav-item">
                     <a class="nav-link color-c3" routerLink="/produtos-e-servicos" routerLinkActive="is-active">Produtos e Serviços</a>
                   </li>
-                  <li class="nav-item"> 
-                    <a class="nav-link color-c3" routerLink="/principais-obras" routerLinkActive="is-active">Principais Obras</a>
-                  </li>
                   <li class="nav-item">
                     <a class="nav-link color-c3" routerLink="/tecnologia" routerLinkActive="is-active">Tecnologia</a>
+                  </li>
+                  <li class="nav-item"> 
+                    <a class="nav-link color-c3" routerLink="/principais-obras" routerLinkActive="is-active">Obras</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link color-c3" routerLink="/contato" routerLinkActive="is-active">Contato</a>
