--- a/src/app/pages/construction/construction.component.html
+++ b/src/app/pages/construction/construction.component.html
@@ -6,9 +6,9 @@
         </div>
     </div>
     <div class="premag-obras-content background-color-c12 d-flex flex-row align-items-start">
-        <h1 class="premag-page-title color-c11 text-uppercase premag-secondary-font d-flex justify-content-start align-items-center">Principais Obras</h1>
+        <h1 class="premag-page-title color-c11 text-uppercase premag-secondary-font d-flex justify-content-start align-items-center">Obras</h1>
         <div class="container premag-obras-container premag-padding-top-80 premag-padding-bottom-80">
-            <h2 class="premag-page-subtitle premag-secondary-font premag-font-48 text-uppercase color-c2">Principais Obras</h2>
+            <h2 class="premag-page-subtitle premag-secondary-font premag-font-48 text-uppercase color-c2">Obras</h2>
             <div class="premag-deco-retangulo-100 background-premag-color-05 premag-height-1x"></div>
             <div class="row premag-padding-top-40">
                 <app-card-obras *ngFor="let itensObra of itensObras" [obras]="itensObra" class="col-lg-4 col-xs-12"></app-card-obras>
@@ -17,7 +17,7 @@
     </div>
     <div class="premag-clientes-content d-flex flex-row align-items-start">
         <div class="container premag-clientes-container premag-padding-top-80 premag-padding-bottom-80">
-            <h2 class="premag-page-subtitle premag-secondary-font premag-font-48 text-uppercase color-c6">Principais Clientes</h2>
+            <h2 class="premag-page-subtitle premag-secondary-font premag-font-48 text-uppercase color-c6">Clientes</h2>
             <div class="premag-deco-retangulo-100 background-premag-color-05 premag-height-1x"></div>
 
             <ngx-slick-carousel 
