Ajuste n apágina de obras e imagens dos banners

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -205,7 +205,7 @@ body .slick-prev, body .slick-next {
 
     &-fabrica{
         &-banner {
-            background: url(assets/images/capa-fabrica.png) no-repeat center center;
+            background: url(assets/images/foto-fabrica-2.jpg) no-repeat center center;
             background-size: cover;
             height: 504px;
             padding: 80px 40px;
@@ -265,7 +265,7 @@ body .slick-prev, body .slick-next {
 
     &-product {
         &-banner {
-            background: url(assets/images/capa-produtos.png) no-repeat center center;
+            background: url(assets/images/foto-fabrica-1.jpg) no-repeat center center;
             background-size: cover;
             height: 504px;
         }
@@ -386,7 +386,7 @@ body .slick-prev, body .slick-next {
     }
     &-tecnologia {
         &-banner {
-            background: url(assets/images/capa-tecnologia.png) no-repeat center center;
+            background: url(assets/images/capa-tecnologia.jpg) no-repeat center center;
             background-size: cover;
             height: 500px;
         }
