--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -20,6 +20,11 @@
                         Tel/Fax:(21) *2633-9933<br>
                         E-mail: <a href="mailto: premag@premag.com.br" class="premag-color-05">premag@premag.com.br</a>
                     </p>
+                    <ul class="premag-list-icon">
+                        <li><a href="https://www.linkedin.com/company/premag-sistema-de-constru%C3%A7%C3%B5es-ltda/?originalSubdomain=br"><img src="../../../assets/images/linkedin.png"></a></li>
+                        <li><a href="https://www.youtube.com/channel/UCdsX-6BK9a-aU83adbooKlQ "><img src="../../../assets/images/youtube.png"></a></li>
+                    </ul>
+                    
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.763286892655!2d-43.02101192373152!3d-22.58795502655596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99bad2bf7ed661%3A0xe8cf8da35e7c6264!2sPREMAG%20-%20Sistema%20de%20Constru%C3%A7%C3%B5es%20Ltda.!5e0!3m2!1sen!2sbr!4v1682977210194!5m2!1sen!2sbr" width="480" height="350" style="border:0; width: 80% !important;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="premag-margin-top-80"></iframe>
                 </div>
                 <div class="col-lg-5">
