--- a/src/app/pages/tecnology/tecnology.component.html
+++ b/src/app/pages/tecnology/tecnology.component.html
@@ -25,7 +25,9 @@
                     <p class="premag-font-20 color-c6 premag-xl-margin-bottom-40">Nova Central de Concreto utiliza misturadores com sistema contra-corrente forçada. Totalmente automatizada, com alto grau de controle, emprega até 7 (sete) agregados diferentes e 2 (dois) tipos de cimento, possibilita a produção industrial dos mais variados tipos de concreto: de alto desempenho-CAD e especiais; secos ou plásticos; leves; coloridos; resistentes à agressividade da água; de altas resistências e qualidade. Atende a ampla diversidade de aplicações aliada a uma produção horária sem concorrência na região.</p>
                     <p class="premag-font-20 color-c6 premag-xl-margin-bottom-40">A <span class="premag-color-05">PREMAG</span> tem como premissa básica, desde a sua criação, a efetivação de elos estreitos integrando Universidade-Estado-Empresa, em benefício da sociedade brasileira.</p>
 
-                    <img class="premag-hero-image w-100" src="../../../assets/images/tecnologia.png" alt="Tecnologia">
+                    <div class="premag-hero-image-banner">
+                        <img class="premag-hero-image w-100" src="../../../assets/images/foto-fabrica-3.jpg" alt="Tecnologia">
+                    </div>
 
                     <div class="container premag-font-Raleway">
                         <div class="row">
@@ -48,8 +50,8 @@
                                 <p class="premag-xl-margin-bottom-40">Na COPPE realizaram-se estudos teóricos sobre bueiros celulares, bem como nova sistemática para otimização da seção transversal de tabuleiros de pontes e viadutos, utilizando o método dos algoritmos genéticos. Este último estudo consta da dissertação de mestrado “Otimização do Projeto de Pontes Protendidas Pré-moldadas pelo Método dos Algoritmos Genéticos”, COPPE, UFRJ, 2004. Outras pesquisas com concretos utilizando fibras de aço foram desenvolvidas na <span class="premag-color-05">PREMAG</span> por pesquisadores da COPPE/UFRJ, tendo sido apresentadas no 42º Reibrac realizado pelo IBRACON em Fortaleza, CE, 2000.</p>
                                 <p>Hoje, após 36 anos de atividades ininterruptas, a <span class="premag-color-05">PREMAG</span> ostenta no seu rol de execução de pontes e viadutos, obras que passadas décadas apresentam excelente estado de conservação. Isso vem demonstrar o aprimorado cuidado na concepção e o acurado controle de qualidade imposto no decorrer do seu processo produtivo.</p>
                             </div>
-                            <div class="col-lg-6 col-xs-12 d-flex flex-row align-items-center justify-content-end">
-                                <img src="../../../assets/images/cidade.png">
+                            <div class="col-lg-6 col-xs-12 d-flex flex-row align-items-center justify-content-end premag-foto-right">
+                                <img src="../../../assets/images/foto-fabrica-4.jpg">
                             </div>
                         </div>
                     </div>
